make wifi command the same size as other commands

--- a/views/FRE-wifi.jade
+++ b/views/FRE-wifi.jade
@@ -10,7 +10,7 @@ block content
       .row
         .large-12.columns
           p Tessel can only connect to 2.4GHz networks. To connect to a new network, enter in your command line (without brackets)
-          h3 <code><cli>tessel wifi -n [network name] -p [password] -s [security type*]</cli></code>
+          p <code><cli>tessel wifi -n [network name] -p [password] -s [security type*]</cli></code>
           i <code>*</code>The security type flag is optional; default is wpa2.<br/><br/>
       .row
         .large-12.columns
