fixing the multiline scripts

--- a/views/social_track.jade
+++ b/views/social_track.jade
@@ -9,7 +9,7 @@
 <!-- Twitter -->
 <img style="display: none;" onLoad="twitter_user(true)" alt="" src="https://twitter.com/login?redirect_after_login=%2Fimages%2Fspinner.gif" />
 
-script
+script.
   function twitter_user(status) {
     if (status) {
     ga('set', 'dimension2', 'Logged In');
