Fixed link and text spacing
+ Also fixed wifi documentation link in japanese view version

--- a/views/ja-FRE-wifi.jade
+++ b/views/ja-FRE-wifi.jade
@@ -80,7 +80,7 @@ block content
           
           p 無線LANをプログラムから制御することもできます。このAPIについての詳細な文書は、
 
-            a(href="https://tessel.io/docs/wifi") ここにあります。
+            a(href="https://github.com/tessel/t1-docs/blob/master/wifi.md") ここにあります。
           p 以下の内容を、<code>wifi-control.js</code>という名前のファイルに保存してください：
           pre.prettyprint#wifiExampleCode
             code.
