updates URLS to refer to new T1 docs location

--- a/views/FRE-finished.jade
+++ b/views/FRE-finished.jade
@@ -9,11 +9,11 @@ block content
         .large-12.columns
           p.moduleStep What's next?
           p
-            a(href="//technical.io/projects" target=0)
+            a(href="//tessel.io/projects" target=0)
               b Check out
               |  Tessel projects &rarr;
           p
-            a(href="//technical.io/docs" target=0)
+            a(href="https://github.com/tessel/t1-docs/blob/master/tutorials/untethered.md" target=0)
               b Learn more
               |  on Tessel's docs page &rarr;
           p
