--- a/views/ja-FRE-finished.jade
+++ b/views/ja-FRE-finished.jade
@@ -11,7 +11,7 @@ block content
           p
             <a href="//technical.io/projects" target=0>Tesselを使ったプロジェクトを<b>見てみましょう</b> &rarr;</a>
           p
-            <a href="//technical.io/docs" target=0>Tesselのドキュメントページを<b>読んでみましょう</b> &rarr;</a>
+            <a href="https://github.com/tessel/t1-docs/blob/master/tutorials/untethered.md" target=0>Tesselのドキュメントページを<b>読んでみましょう</b> &rarr;</a>
           p
             <a href="////github.com/tessel/contribution-guide" target=2>Tesselのソースコードを<b>オープンソースとして公開しています</b> &rarr;</a>
           p
