--- a/views/layout.jade
+++ b/views/layout.jade
@@ -109,7 +109,7 @@ html
           li
             a(href="https://tessel.io/start") Start
           li
-            a(href="https://tessel.io/docs") Docs
+            a(href="https://github.com/tessel/t1-docs") Docs
           li
             a(href="https://tessel.io/modules") Modules
           li
