--- a/views/FRE-usage.jade
+++ b/views/FRE-usage.jade
@@ -68,7 +68,7 @@ block content
     .large-4.columns
       p The <code>push</code> command is great if you want to run Tessel from an external power source, such as a USB battery, wall USB power, solar phone charger, or another power source.
       p The code you've pushed will start running as soon as the Tessel receives power.
-      p Read more about it <a href="https://tessel.io/docs/untethered", target=0>here.</a>
+      p Read more about it <a href="https://github.com/tessel/t1-docs/blob/master/tutorials/untethered.md", target=0>here.</a>
     .large-4.columns
       img(src="https://s3.amazonaws.com/technicalmachine-assets/doc+pictures/tessel-battery.jpg", style="height:300px")
     .large-4.columns
