add link to T2 start

--- a/views/FRE-install.jade
+++ b/views/FRE-install.jade
@@ -6,6 +6,9 @@ block content
   .row
     .large-12.columns.fre-container#anchor
       h1 Install Tessel
+      p
+        i These are instructions for <a href="https://github.com/tessel/t1-docs">Tessel 1</a>. Start <a href="//tessel.io/t2-start">here for Tessel 2.</a>
+
       p New to the command line?
         a(href="/cmd")  Take a step back and learn the basics.
 
